working on express routes

--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
   "name": "cat-shelter-workshop",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jmmon/cat-shelter-workshop.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jmmon/cat-shelter-workshop/issues"
-  },
-  "homepage": "https://github.com/jmmon/cat-shelter-workshop#readme",
   "dependencies": {
-    "formidable": "^1.2.2"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "formidable": "^1.2.2",
+    "hbs": "~4.0.4",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1"
   }
 }
